[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Particles/Particles_sand.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Bullet/Chain-Bullet.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Bullet/envyBullet.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
height = 6.11188

[sub_resource type="CapsuleShape2D" id=7]
height = 6.34664

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.744186, 1 )
colors = PoolColorArray( 0.675781, 1, 0, 1, 0.271754, 0.642578, 0.0301208, 1, 1, 0.901961, 0.847059, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
flag_disable_z = true
direction = Vector3( 1, 1, 1 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
color_ramp = SubResource( 10 )

[node name="envyBullet" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 5 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 6 )

[node name="CollisionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionRange"]
rotation = -1.5708
shape = SubResource( 7 )

[node name="runout" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="explosiontimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="explosion" type="Particles2D" parent="."]
emitting = false
amount = 50
one_shot = true
explosiveness = 1.0
process_material = SubResource( 11 )
texture = ExtResource( 1 )

[connection signal="body_entered" from="CollisionRange" to="." method="_on_CollisionRange_body_entered"]
[connection signal="timeout" from="runout" to="." method="_on_runout_timeout"]
[connection signal="timeout" from="explosiontimer" to="." method="_on_explosiontimer_timeout"]
